k8s_work/service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - docker-fibonacci.com
        - www.docker-fibonacci.com
      secretName: docker-fibonacci.com
  rules:
    - hosts: docker-fibonacci.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-service-cluster-ip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-service-cluster-ip
              servicePort: 5000
    - hosts: www.docker-fibonacci.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-service-cluster-ip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-service-cluster-ip
              servicePort: 5000
